[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
config = { version = "0.14.1", features = ["json"] }
clap = "4.5.20"
num_cpus = "1.16.0"
tokio = { version = "1.40.0", features = ["full"] }
async-timer = "0.7.4"
base64 = "0.22.1"
bytes = { version = "1.7.2", features = ["serde"] }
chrono = "0.4.38"
futures = "0.3.31"
hex = "0.4.2"
httparse = "1.3.4"
native-tls = "0.2.4"
openssl = "0.10.66"
thiserror = "1.0.64"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio-tls = "0.3.0"
tokio-openssl = "0.6.5"
serde_with = "3.11.0"
sha2 = "0.10.8"
env_logger = "0.11.5"
log = "0.4"
secp256k1 = { version = "0.29.1", features = ["rand", "rand-std"] }
bs58 = { version = "0.5.1", features = ["check"] }
prost = "0.13.3"
xrpl_types = { version = "0.16.0", default-features = false }
spin = { version = "0.9.8", default-features = false, features = ["once"] }
ascii = { version = "1.1.0", features = ["serde"] }
crossbeam = "0.8"
once_cell = "1.20.2"

# local
overlay = { path = "overlay" }
shared = { path = "shared" }

[workspace]
members = [
    "xrpld",
    "overlay",
    "consensus",
    "proto",
    "shared"
]
resolver = "2"
