[package]
name = "crypto"
version = "0.0.1"
authors = ["Javi Romero <elmurci@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bs58_ripple = { path = "../bs58_ripple" }
hex = "0.4.2"
lazy_static = "1.4.0"
quick-error = "2.0.1"
sha2 = "0.10.8"
secp256k1 = { version = "0.29.1", features = ["rand", "rand-std"] }
