[package]
name = "network"
version = "0.0.1"
authors = ["Javi Romero <elmurci@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
base64 = "0.22.1"
bytes = "1.7.2"
chrono = "0.4.38"
futures = "0.3"
hex = "0.4.2"
httparse = "1.3.4"
native-tls = "0.2.4"
openssl = "0.10.66"
quick-error = "2.0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-tls = "0.3.0"
tokio-native-tls = "0.3.1"

# local
bs58_ripple = { path = "../bs58_ripple" }
crypto = { path = "../crypto" }
logj = { path = "../logj" }
protocol = { path = "../protocol" }
shared = { path = "../shared" }