[package]
name = "overlay"
authors = ["Javi Romero <elmurci@gmail.com>"]
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
config.workspace = true
base64.workspace = true
openssl.workspace = true
serde.workspace = true
tokio-openssl.workspace = true
futures.workspace = true
rand.workspace = true
bytes.workspace = true
native-tls.workspace = true
hex.workspace = true
serde_json.workspace = true
httparse.workspace = true

# local
proto = { path = "../proto" }
shared = { path = "../shared" }