[package]
name = "shared"
version = "0.0.1"
authors = ["Javi Romero <elmurci@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bytes = "1.7.2"
prost = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.10.0"
hex = "0.4.2"
lazy_static = "1.4.0"
quick-error = "2.0.1"
sha2 = "0.10.8"
env_logger = "0.11.5"
log = "0.4"
secp256k1 = { version = "0.29.1", features = ["rand", "rand-std"] }
bs58 = { version = "0.5.1", features = ["check"] }

[build-dependencies]
prost-build = "0.13.3"
