[package]
name = "shared"
authors = ["Javi Romero <elmurci@gmail.com>"]
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2.workspace = true
secp256k1.workspace = true
hex.workspace = true
bs58.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_with.workspace = true
env_logger.workspace = true
serde_json.workspace = true
log.workspace = true
bytes.workspace = true
native-tls.workspace = true
xrpl_types.workspace = true
spin.workspace = true
ascii.workspace = true
once_cell.workspace = true
config.workspace = true

# local
proto = { path = "../proto" }