[package]
name = "xrpld"
description = "Rust XRP Ledger daemon (on Rust)"
readme = "README.md"
repository = "https://github.com/elmurci/xrpld-rs"
authors = ["Javi Romero <elmurci@gmail.com>"]
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xrpld"
path = "./main.rs"

[dependencies]
tokio.workspace = true
config.workspace = true
clap.workspace = true
lazy_static.workspace = true

# local
overlay = { path = "../overlay" }
shared = { path = "../shared" }

[build-dependencies]
git2 = "0.10.0" # `cc` conflict with `secp256k1`, waiting https://github.com/rust-bitcoin/rust-secp256k1/pull/204
